--- a/Website/Home.html
+++ b/Website/Home.html
@@ -30,9 +30,9 @@
       <div class = "navbar fit navbar-light siteNav img-rounded">
         <ul class = "nav navbar-nav fit img-rounded specialBlue">
           <li class = "active"><a href = "Home.html" class = "linkGlyph">Home</a></li>
-          <li><a href="NewKey.html" class = "linkGlyph">Generate a Key</a></li>
-          <li><a href="Encode.html" class = "linkGlyph">Encode a Message</a></li>
-          <li><a href="Decode.html" class = "linkGlyph">Decode a Message</a></li>
+          <li><a href="NewKey.php" class = "linkGlyph">Generate a Key</a></li>
+          <li><a href="Encode.php" class = "linkGlyph">Encode a Message</a></li>
+          <li><a href="Decode.php" class = "linkGlyph">Decode a Message</a></li>
         </ul>
       </div>
 
