--- a/Website/Home.html
+++ b/Website/Home.html
@@ -77,9 +77,9 @@
             <h3>How It Works - <a href = "NewKey.php" class = "linkGlyph">Key Creation</a></h3>
             <p>The type of encryption KeepItSecret uses is called <a href = "https://en.wikipedia.org/wiki/Public-key_cryptography">public key cryptography</a>, and so for public key cryptography to work, as the name suggests, keys would need to be generated. When you register an address and a password, they get stored in a database along with the date of creation and whether they have a hard expiration date. If the key has a hard expiration date, it won't necessarily exist after one day of its creation regardless of usage. Otherwise, the key might not exist within a week of disuse.</p>
             <h3>How It Works - <a href = "Encode.php" class = "linkGlyph">Encoding</a></h3>
-            <p></p>
+            <p>Through encryption, a message goes through many different phases to make it unreadable. The first step taken is that the recipient's private key is found out from their public key. The user's private key is then used as the random number generator's (RNG's) seed. Then, the message gets <a href = "https://en.wikipedia.org/wiki/Caesar_cipher">Caeser Ciphered</a> with each shift amount being a random number for each letter. Then, each letter of the message gets shuffled. Afterwards, random letters are inserted in the message. Then, the message's length and the recipient's public key are inserted into the message to be used for decrypting it.</p>
             <h3>How It Works - <a href = "Decode.php" class = "linkGlyph">Decoding</a></h3>
-            <p></p>
+            <p>To decrypt a message, the user must enter a password; the entered password is checked with the message's public key: if they align, the message undergoes decryption. Otherwise, if the recipient enters an incorrect password, a random message is returned. In decryption, the computer finds the message's length, and then seeds the RNG with the entered private key. The computer then generates and saves the same random numbers that it generated for encryption. It then takes the message through the encryption process, but it performs the encryption process backwards to find the original message.</p>
           </div>
           <div class = "col-sm-4 imgContainer">
 
