--- a/Website/Home.html
+++ b/Website/Home.html
@@ -14,7 +14,6 @@
     <script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <link rel = "stylesheet" href = "AllPage.css"/>
-    <script src = "ManipulateText.js"></script>
 
   </head>
 
@@ -75,7 +74,7 @@
             <h3>About</h3>
             <p>Have you ever sent a private message to someone, only for the message to get intercepted or looked upon by a different person? With KeepItSecret, you won't need to have that problem anymore. With this service, you can create an address and a password, or write messages intended for specific addresses. Once a message is written for an address is writen, the message gets encoded. Whenever anyone recieves an encoded message, they can try to decode it, but the only way to actually get the original message is to use the intended recipient's address's password.</p>
             <h3>How It Works - <a href = "NewKey.php" class = "linkGlyph">Key Creation</a></h3>
-            <p>The type of encryption KeepItSecret uses is called <a href = "https://en.wikipedia.org/wiki/Public-key_cryptography">public key cryptography</a>, and so for public key cryptography to work, as the name suggests, keys would need to be generated. When you register an address and a password, they get stored in a database along with the date of creation and whether they have a hard expiration date. If the key has a hard expiration date, it won't necessarily exist after one day of its creation regardless of usage. Otherwise, the key might not exist within a week of disuse.</p>
+            <p>The type of encryption KeepItSecret uses is similar to <a href = "https://en.wikipedia.org/wiki/Public-key_cryptography">public key cryptography</a>, and so for public key cryptography to work, as the name suggests, keys would need to be generated. When you register an address and a password, they get stored in a database along with the date of creation and whether they have a hard expiration date. If the key has a hard expiration date, it won't necessarily exist after one day of its creation regardless of usage. Otherwise, the key might not exist within a week of disuse.</p>
             <h3>How It Works - <a href = "Encode.php" class = "linkGlyph">Encoding</a></h3>
             <p>Through encryption, a message goes through many different phases to make it unreadable. The first step taken is that the recipient's private key is found out from their public key. The user's private key is then used as the random number generator's (RNG's) seed. Then, the message gets <a href = "https://en.wikipedia.org/wiki/Caesar_cipher">Caeser Ciphered</a> with each shift amount being a random number for each letter. Then, each letter of the message gets shuffled. Afterwards, random letters are inserted in the message. Then, the message's length and the recipient's public key are inserted into the message to be used for decrypting it.</p>
             <h3>How It Works - <a href = "Decode.php" class = "linkGlyph">Decoding</a></h3>
