Finished not working encoding and decoding

--- a/Website/index.html
+++ b/Website/index.html
@@ -20,14 +20,14 @@
     <div class = "main">
 
       <div class = "masthead">
-        <a href = "Home.html"><img src="images/Masthead.png" class = "fit rounded-img" id = "bannerImg"/></a>
+        <a href = "index.html"><img src="images/Masthead.png" class = "fit rounded-img" id = "bannerImg"/></a>
       </div>
 
       <br/>
 
       <div class = "navbar fit navbar-light siteNav img-rounded">
         <ul class = "nav navbar-nav fit img-rounded specialBlue">
-          <li class = "active"><a href = "Home.html" class = "linkGlyph">Home</a></li>
+          <li class = "active"><a href = "index.html" class = "linkGlyph">Home</a></li>
           <li><a href="NewKey.php" class = "linkGlyph">Generate a Key</a></li>
           <li><a href="Encode.php" class = "linkGlyph">Encode a Message</a></li>
           <li><a href="Decode.php" class = "linkGlyph">Decode a Message</a></li>
