--- a/www/index.html
+++ b/www/index.html
@@ -28,9 +28,9 @@
       <div class = "navbar fit navbar-light siteNav img-rounded">
         <ul class = "nav navbar-nav fit img-rounded specialBlue">
           <li class = "active"><a href = "index.html" class = "linkGlyph">Home</a></li>
-          <li><a href="NewKey.php" class = "linkGlyph">Generate a Key</a></li>
-          <li><a href="Encode.php" class = "linkGlyph">Encode a Message</a></li>
-          <li><a href="Decode.php" class = "linkGlyph">Decode a Message</a></li>
+          <li><a href = "Generate_Key/index.php" class = "linkGlyph">Generate a Key</a></li>
+          <li><a href = "Encode/index.php" class = "linkGlyph">Encode a Message</a></li>
+          <li><a href = "Decode/index.php" class = "linkGlyph">Decode a Message</a></li>
         </ul>
       </div>
 
@@ -71,13 +71,13 @@
         <div class = "row vertical-align">
           <div class = "col-sm-8 specialBlue img-rounded">
             <h3>About</h3>
-            <p>Have you ever sent a private message to someone, only for the message to get intercepted or looked upon by a different person? With KeepItSecret, you won't need to have that problem anymore. With this service, you can create an address and a password, or write messages intended for specific addresses. Once a message is written for an address is writen, the message gets encoded. Whenever anyone recieves an encoded message, they can try to decode it, but the only way to actually get the original message is to use the intended recipient's address's password.</p>
-            <h3>How It Works - <a href = "NewKey.php" class = "linkGlyph">Key Creation</a></h3>
-            <p>The type of encryption KeepItSecret uses is similar to <a href = "https://en.wikipedia.org/wiki/Public-key_cryptography">public key cryptography</a>, and so for public key cryptography to work, as the name suggests, keys would need to be generated. When you register an address and a password, they get stored in a database along with the date of creation and whether they have a hard expiration date. If the key has a hard expiration date, it won't necessarily exist after one day of its creation regardless of usage. Otherwise, the key might not exist within a week of disuse.</p>
-            <h3>How It Works - <a href = "Encode.php" class = "linkGlyph">Encoding</a></h3>
-            <p>Through encryption, a message goes through many different phases to make it unreadable. The first step taken is that the recipient's private key is found out from their public key. The user's private key is then used as the random number generator's (RNG's) seed. Then, the message gets <a href = "https://en.wikipedia.org/wiki/Caesar_cipher">Caeser Ciphered</a> with each shift amount being a random number for each letter. Then, each letter of the message gets shuffled. Afterwards, random letters are inserted in the message. Then, the message's length and the recipient's public key are inserted into the message to be used for decrypting it.</p>
-            <h3>How It Works - <a href = "Decode.php" class = "linkGlyph">Decoding</a></h3>
-            <p>To decrypt a message, the user must enter a password; the entered password is checked with the message's public key: if they align, the message undergoes decryption. Otherwise, if the recipient enters an incorrect password, a random message is returned. In decryption, the computer finds the message's length, and then seeds the RNG with the entered private key. The computer then generates and saves the same random numbers that it generated for encryption. It then takes the message through the encryption process, but it performs the encryption process backwards to find the original message.</p>
+            <p>Have you ever sent a private message to someone, only for the message to get intercepted or looked upon by a different person? With KeepItSecret, you won't need to have that problem anymore. With this service, you can create an address and a password, or write messages intended for specific addresses. Once a message is written for an address, the message gets encoded. Whenever anyone recieves an encoded message, they can try to decode it, but the only way to actually get the original message is to use the intended recipient's address and password.</p>
+            <h3>How It Works - <a href = "Generate_Key/index.php" class = "linkGlyph">Key Creation</a></h3>
+            <p>The type of encryption KeepItSecret uses is similar to <a href = "https://en.wikipedia.org/wiki/Public-key_cryptography">public key cryptography</a>, and so for public key cryptography to work, as the name suggests, keys would need to be generated. When you register an address and a password, they get stored in a database along with the date of creation and whether they have a hard expiration date. If the key has a hard expiration date, it will get deleted after one day of its creation regardless of usage. Otherwise, the key will get deleted after a week of disuse.</p>
+            <h3>How It Works - <a href = "Encode/index.php" class = "linkGlyph">Encoding</a></h3>
+            <p>Through encryption, a message goes through two main phases to make it unreadable. The first step taken is that the recipient's private key is found out from their public key. The user's private key is then used as the random number generator's (RNG's) seed. This is a necessary step due to how <a href = "https://en.wikipedia.org/wiki/Pseudorandom_number_generator">pseudo-random number generation</a> works: the same seed will always generate the same "random" numbers (this is used later for decoding the message). Then, the message gets <a href = "https://en.wikipedia.org/wiki/Caesar_cipher">Caeser Ciphered</a> with each shift amount being a random number for each letter. Then, each letter of the message gets shuffled. Afterwards, random letters are inserted in the message. Then, the original message's length is concatenated at the end of the message to be used for decrypting it.</p>
+            <h3>How It Works - <a href = "Decode/index.php" class = "linkGlyph">Decoding</a></h3>
+            <p>To decrypt a message, the user must enter their password. If their password was the private key used to encrypt the message, the message will decrypt correctly. Otherwise, decryption will either error or return something random. In decryption, the computer finds the message's length, and then seeds the RNG with the entered private key. The computer then generates and saves the same random numbers that it generated for encryption. It then takes the message through a backwards version of the encryption process to instead of getting from a message to an encoded message, will instead go from an encoded message to the original message. This is possible because it seeded the RNG the same way in both encryption and decryption, so the same "random" numbers were generated both times.</p>
           </div>
           <div class = "col-sm-4 imgContainer">
 
@@ -97,14 +97,14 @@
           </div>
           <div class = "col-sm-3">
             <a role = "button" href = "https://github.com/SaurabhTotey" class = "btn btn-block footBtn">
-              <h5>Creator Github</h5>
+              <h5>Creator GitHub</h5>
               <p>SaurabhTotey</p>
             </a>
           </div>
           <div class = "col-sm-3">
-            <a role = "button" href = "#" class = "btn btn-block footBtn">
+            <a role = "button" href = "https://saurabhtotey.github.io/" class = "btn btn-block footBtn">
               <h5>Creator Portfolio</h5>
-              <p>Ideally would be SaurabhTotey.com</p>
+              <p>saurabhtotey.github.io</p>
             </a>
           </div>
           <div class = "col-sm-3">
